resolve action